--- a/contact.html
+++ b/contact.html
@@ -151,7 +151,7 @@
 <div class="container pt-5 pb-3 pl-3 pl-md-0 pr-3 pr-md-0 mb-5">
     <div class="row shadow">
         <div
-            class="col-12 col-md-6 pt-5 pt-md-0 pb-3 pb-md-0 align-items-center bg-white d-flex justify-content-center mt-3">
+            class="col-12 col-md-6 pt-5 pt-md-0 pb-3 pb-md-0 align-items-center bg-info d-flex justify-content-center mt-3">
             <div class="text-center address">
                 <h3>
                     <span class="key text-dark font-weight-light">City: </span>
@@ -201,7 +201,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-md-6 bg-info p-3 mt-3 text-primary">
+        <div class="col-12 col-md-6 bg-white p-3 mt-3 text-primary">
             <form class="pt-5 pb-5" action="https://getform.io/f/1065200e-8bc0-4626-b6fa-c05f418d9ddf" method="POST">
                 <div class="form-group">
                     <label for="your-name">Name</label>
