--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <div
         class="col-12 col-md-2 company-logo pr-2 p-4 align-items-center justify-content-center row bg-info">
         <a class="btn btn-link p-0" href="https://selise.ch/" target="_blank" norel norefer>
-          <img src="/assets/images/selise-logo.png" alt="Kousher Alam Photo" />
+          <img src="/assets/images/selise-logo.png" style="width: 100%; max-width: 160px;" alt="Kousher Alam Photo" />
         </a>
       </div>
       <div class="col-12 col-md-10 p-4">
@@ -192,7 +192,7 @@
       <div
         class="col-12 col-md-2 company-logo pr-2 p-4 align-items-center justify-content-center row bg-black">
         <a class="btn btn-link p-0" href="https://brightbrains.ae/en-us/" target="_blank" norel norefer>
-          <img src="/assets/images/Bright-Brains-Technology.jpg" alt="Kousher Alam Photo" />
+          <img src="/assets/images/Bright-Brains-Technology.jpg" style="width: 100%; max-width: 160px;" alt="Kousher Alam Photo" />
         </a>
       </div>
       <div class="col-12 col-md-10 p-4">
@@ -222,7 +222,7 @@
       <div
         class="col-12 col-md-2 company-logo pr-2 p-4 align-items-center justify-content-center row bg-primary">
         <a class="btn btn-link p-0" href="https://nybsys.com/" target="_blank" norel norefer>
-          <img src="/assets/images/nybsys.png" alt="Kousher Alam Photo" />
+          <img src="/assets/images/nybsys.png" style="width: 100%; max-width: 200px;" alt="Kousher Alam Photo" />
         </a>
       </div>
       <div class="col-12 col-md-10 p-4">
@@ -250,7 +250,7 @@
       <div
         class="col-12 col-md-2 company-logo pr-2 p-4 align-items-center justify-content-center row bg-info">
         <a class="btn btn-link p-0" href="https://www.linkedin.com/company/atique-it/" target="_blank" norel norefer>
-          <img src="/assets/images/atique-it.png" alt="Kousher Alam Photo" />
+          <img src="/assets/images/atique-it.png" style="width: 100%; max-width: 120px;" alt="Kousher Alam Photo" />
         </a>
       </div>
       <div class="col-12 col-md-10 p-4">
@@ -749,7 +749,7 @@
       <div class="single-education bg-info shadow-sm mb-3 row">
         <div class="col-12 col-md-2 company-logo pr-2 p-4 align-items-center justify-content-center row bg-info">
           <a class="btn btn-link p-0" href="https://www.bubt.edu.bd/" target="_blank" norel norefer>
-            <img src="/assets/images/BUBT-Logo.png" alt="Kousher Alam Photo" />
+            <img src="/assets/images/BUBT-Logo.png" style="width: 100%; max-width: 120px;" alt="Kousher Alam Photo" />
           </a>
         </div>
         <div class="col-12 col-md-10 p-4">
@@ -769,7 +769,7 @@
       <div class="single-education bg-info shadow-sm mb-3 row">
         <div class="col-12 col-md-2 company-logo pr-2 p-4 align-items-center justify-content-center row bg-white">
           <a class="btn btn-link p-0" href="http://kpik.org" target="_blank" norel norefer>
-            <img src="/assets/images/kpik.jpg" alt="Kousher Alam Photo" />
+            <img src="/assets/images/kpik.jpg" style="width: 100%; max-width: 120px;" alt="Kousher Alam Photo" />
           </a>
         </div>
         <div class="col-12 col-md-10 p-4">
