--- a/demo/index.html
+++ b/demo/index.html
@@ -48,7 +48,7 @@
 <meta property="twitter:image" content="https://kousheralam.tech/assets/blog/css-grid/future_technology_prospects.png" />
 <meta property="twitter:title" content="Demo Work" />
 <script type="application/ld+json">
-{"url":"https://kousheralam.tech/demo/","image":"https://kousheralam.tech/assets/blog/css-grid/future_technology_prospects.png","headline":"Demo Work","@type":"WebPage","@context":"https://schema.org"}</script>
+{"@type":"WebPage","url":"https://kousheralam.tech/demo/","image":"https://kousheralam.tech/assets/blog/css-grid/future_technology_prospects.png","headline":"Demo Work","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
   <script src="/assets/js/app.js"></script>
@@ -199,7 +199,7 @@
 </div>
 </div>
 
-<div class="single-blog p-3 p-md-0">
+<div class="single-blog p-1 p-md-0 w-100">
     <div class="pagination text-right mb-3">
     
     <button disabled  class="btn btn-primary pl-4 pr-4 pt-2 pb-2 previous mr-3">Previous</button>
