--- a/my-skill-details/programming/php.html
+++ b/my-skill-details/programming/php.html
@@ -50,7 +50,7 @@
 <meta property="twitter:image" content="https://kousheralam.tech/assets/blog/css-grid/future_technology_prospects.png" />
 <meta property="twitter:title" content="PHP" />
 <script type="application/ld+json">
-{"url":"https://kousheralam.tech/my-skill-details/programming/php.html","image":"https://kousheralam.tech/assets/blog/css-grid/future_technology_prospects.png","headline":"PHP","description":"PHP Is My first programming language. I start my career with php. Used Codigniter and Laravel Framework as well as raw PHP to develop solution.","@type":"WebPage","@context":"https://schema.org"}</script>
+{"@type":"WebPage","url":"https://kousheralam.tech/my-skill-details/programming/php.html","image":"https://kousheralam.tech/assets/blog/css-grid/future_technology_prospects.png","headline":"PHP","description":"PHP Is My first programming language. I start my career with php. Used Codigniter and Laravel Framework as well as raw PHP to develop solution.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
   <script src="/assets/js/app.js"></script>
