--- a/my-skill-details/front-end.html
+++ b/my-skill-details/front-end.html
@@ -50,7 +50,7 @@
 <meta property="twitter:image" content="https://kousheralam.tech/assets/blog/css-grid/future_technology_prospects.png" />
 <meta property="twitter:title" content="Front End Development" />
 <script type="application/ld+json">
-{"url":"https://kousheralam.tech/my-skill-details/front-end.html","image":"https://kousheralam.tech/assets/blog/css-grid/future_technology_prospects.png","headline":"Front End Development","description":"Skill Destails description will be here","@type":"WebPage","@context":"https://schema.org"}</script>
+{"@type":"WebPage","url":"https://kousheralam.tech/my-skill-details/front-end.html","image":"https://kousheralam.tech/assets/blog/css-grid/future_technology_prospects.png","headline":"Front End Development","description":"Skill Destails description will be here","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
   <script src="/assets/js/app.js"></script>
