--- a/contact.html
+++ b/contact.html
@@ -78,16 +78,16 @@
             </div>
             <div class="menu-holder d-none d-md-block col-9 text-right">
                 <ul class="menu mb-0">
-                    <li > 
+                    <li> 
                         <a href="/blog">Blog</a>
                     </li>
-                    <li > 
+                    <li> 
                         <a href="/portfolio">Portfolio</a> 
                     </li>
-                    <li > 
+                    <li> 
                         <a href="/demo">Demo</a> 
                     </li>
-                    <li  class="active" > 
+                    <li class="active"> 
                         <a href="/contact">Contact</a> 
                     </li>
                 </ul>
@@ -103,30 +103,22 @@
     <div class="pl-3 pr-3 pt-5">
         <ul class="list-style-none pt-5">
             <li>
-                <a 
-                    class='btn text-light btn-block text-left ' 
-                    href="/blog">
+                <a class="btn text-light btn-block text-left " href="/blog">
                     Blog
                 </a>
             </li>
             <li>
-                <a 
-                    class='btn text-light btn-block text-left '
-                    href="/portfolio">
+                <a class="btn text-light btn-block text-left " href="/portfolio">
                     Portfolio
                 </a>
             </li>
             <li>
-                <a 
-                    class='btn text-light btn-block text-left ' 
-                    href="/demo">
+                <a class="btn text-light btn-block text-left " href="/demo">
                     Demo
                 </a>
             </li>
             <li>
-                <a 
-                    class='btn text-light btn-block text-left  active '
-                    href="/contact">
+                <a class="btn text-light btn-block text-left  active " href="/contact">
                     Contact
                 </a>
             </li>
@@ -135,37 +127,13 @@
 </div>
 
 <div class="main-content">
-  
   <div class="page-wrapper contact-page">
-    <div class='details-page-title bg-info shadow' 
-    style="background-image: url('/assets/blog/css-grid/future_technology_prospects.png'); min-height: 350px;">
+    <div class="details-page-title bg-info shadow" style="background-image: url('/assets/blog/css-grid/future_technology_prospects.png'); min-height: 350px;">
 </div>
-    <div class="container shadow pt-4 p-3 pr-3 pb-2 mb-5 bg-white position-relative" style="top: -30px;">
-      
-<div class="row">
-    <div class="col-12">
-        <h1 class="h3 position-relative bg-white pb-3 pr-3">
-            <span class="text-dark"></span> 
-            <span style="color: #d6d5d5 !important;">Send Your Message</span>
-        </h1>
-    </div>
-</div>
-
-        <div class="row" style="margin: -15px;">
-    <div class="col-12 col-md-6 pt-5 pt-md-0 pb-3 pb-md-0 align-items-center bg-info d-flex justify-content-center mt-3">
+    <div class="container shadow p-0 mb-5 bg-white position-relative" style="top: -30px;">
+        <div class="row">
+        <div class="col-12 col-md-6 pt-5 pt-md-0 pb-3 pb-md-0 align-items-center bg-info d-flex justify-content-center">
         <div class="text-center address">
-            <h3>
-                <span class="key text-dark font-weight-light">City: </span>
-                <span class="value text-primary">Dhaka</span>
-            </h3>
-            <h3>
-                <span class="key text-dark font-weight-light">Country: </span>
-                <span class="value text-primary">Bangladesh</span>
-            </h3>
-            <h3>
-                <span class="key text-dark font-weight-light">Mobile: </span>
-                <span class="value text-primary">+88 0177-8641026</span>
-            </h3>
             <div class="socila-media text-center text-md-left mt-4">
                 <ul class="inline d-inline-block">
     <li class="mr-3 d-inline-block">
@@ -200,9 +168,15 @@
     </li>
 </ul>
             </div>
+            <p class="small text-center">
+                <span>Email: </span>
+                <a class="" href="mailto:kousheralampranto@gmail.com">
+                    kousheralampranto@gmail.com
+                </a>
+            </p>
         </div>
     </div>
-    <div class="col-12 col-md-6 bg-primary p-3 text-white mt-3">
+    <div class="col-12 col-md-6 bg-primary p-3 text-white">
         <form class="pt-5 pb-5" action="https://getform.io/f/1065200e-8bc0-4626-b6fa-c05f418d9ddf" method="POST">
             <div class="form-group">
                 <label for="your-name">Name</label>
@@ -229,10 +203,8 @@
         </form>
     </div>
 </div>
-
       </div>
     </div>
-    
 </div>
 
 <footer class="footer pt-5 pt-md-3 bg-secondary">
@@ -297,12 +269,12 @@
                     <p class="small text-center text-md-left mb-1 text-info">Social Media</p>
                     <ul class="inline d-inline-block">
     <li class="mr-3 d-inline-block">
-        <a href="https://facebook.com/MdKousherAlam" rel="noreferrer noopener"  target="blank">
+        <a href="https://facebook.com/MdKousherAlam" rel="noreferrer noopener" target="blank">
             <img src="/assets/icons/facebook.svg" alt="facebook" />
         </a>
     </li>
     <li class="mr-3 d-inline-block">
-        <a href="https://twitter.com/Kousheralam1" rel="noreferrer noopener"  target="blank">
+        <a href="https://twitter.com/Kousheralam1" rel="noreferrer noopener" target="blank">
             <img src="/assets/icons/twitter.svg" alt="twitter" />
         </a>
     </li>
@@ -338,6 +310,7 @@
         </div>
     </div>
 </footer>
+
 
 
   
