--- a/my-skill-details/programming/cpp.html
+++ b/my-skill-details/programming/cpp.html
@@ -146,16 +146,15 @@
 <div class="row">
     <div class="col-12">
         <h1 class="h3 position-relative bg-white pb-3 pr-3">
-            <span class="text-dark"></span> 
-            <span style="color: #d6d5d5 !important;">C++ Programming</span>
+            <span class="text-dark">Skill Details /</span> 
+            <span style="color: rgba(0, 0, 0, .41)!important;">C++ Programming</span>
         </h1>
     </div>
 </div>
 
         <div class="row">
-  <div class="col-12 p-3 p-md-0">
+  <div class="col-12 p-0 p-md-0">
     <div class="title-section mb-4">
-      <h1 class="mb-1">My C++ Programming Skill Details</h1>
       <div class='percent-holder row'>
         
         
