--- a/portfolio/Attendance-System.html
+++ b/portfolio/Attendance-System.html
@@ -153,13 +153,13 @@
     <div class="col-12">
         <h1 class="h3 position-relative bg-white pb-3 pr-3">
             <span class="text-dark">Portfolio /</span> 
-            <span style="color: #d6d5d5 !important;">Attendance System</span>
+            <span style="color: rgba(0, 0, 0, .41)!important;">Attendance System</span>
         </h1>
     </div>
 </div>
 
         <div class="row">
-  <div class="col-12 p-3 p-md-0">
+  <div class="col-12 p-0 p-md-3 p-md-0">
     <div class="text-right w-100 d-inline-block">
       
     </div>
