--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -178,7 +178,7 @@
     </div>
     <div class="col-12">
         
-<div class="single-blog mb-4 mb-md-3 p-0 p-md-3 p-md-0">
+<div class="single-blog mb-4 mb-md-3 p-0">
     <a class="content-card border shadow-sm bg-white mb-3" href="/portfolio/buy.co.sz.html">
     <div class="row">
         <div class="col-12 col-sm-5 col-md-4 preview position-relative text-center bg-white">
@@ -230,7 +230,7 @@
 </a>
 </div>
 
-<div class="single-blog mb-4 mb-md-3 p-0 p-md-3 p-md-0">
+<div class="single-blog mb-4 mb-md-3 p-0">
     <a class="content-card border shadow-sm bg-white mb-3" href="/portfolio/Attendance-System.html">
     <div class="row">
         <div class="col-12 col-sm-5 col-md-4 preview position-relative text-center bg-white">
@@ -294,7 +294,7 @@
 </a>
 </div>
 
-<div class="single-blog mb-4 mb-md-3 p-0 p-md-3 p-md-0">
+<div class="single-blog mb-4 mb-md-3 p-0">
     <a class="content-card border shadow-sm bg-white mb-3" href="/portfolio/nmc-website.html">
     <div class="row">
         <div class="col-12 col-sm-5 col-md-4 preview position-relative text-center bg-white">
@@ -340,7 +340,7 @@
 </a>
 </div>
 
-<div class="single-blog mb-4 mb-md-3 p-0 p-md-3 p-md-0">
+<div class="single-blog mb-4 mb-md-3 p-0">
     <a class="content-card border shadow-sm bg-white mb-3" href="/portfolio/lte-dashboard.html">
     <div class="row">
         <div class="col-12 col-sm-5 col-md-4 preview position-relative text-center bg-white">
@@ -398,7 +398,7 @@
 </a>
 </div>
 
-<div class="single-blog mb-4 mb-md-3 p-0 p-md-3 p-md-0">
+<div class="single-blog mb-4 mb-md-3 p-0">
     <a class="content-card border shadow-sm bg-white mb-3" href="/portfolio/ig100.html">
     <div class="row">
         <div class="col-12 col-sm-5 col-md-4 preview position-relative text-center bg-white">
@@ -444,7 +444,7 @@
 </a>
 </div>
 
-<div class="single-blog mb-4 mb-md-3 p-0 p-md-3 p-md-0">
+<div class="single-blog mb-4 mb-md-3 p-0">
     <a class="content-card border shadow-sm bg-white mb-3" href="/portfolio/drinkwell-apps.html">
     <div class="row">
         <div class="col-12 col-sm-5 col-md-4 preview position-relative text-center bg-white">
@@ -496,7 +496,7 @@
 </a>
 </div>
 
-<div class="single-blog mb-4 mb-md-3 p-0 p-md-3 p-md-0">
+<div class="single-blog mb-4 mb-md-3 p-0">
     <a class="content-card border shadow-sm bg-white mb-3" href="/portfolio/Nybsys-Website.html">
     <div class="row">
         <div class="col-12 col-sm-5 col-md-4 preview position-relative text-center bg-white">
