--- a/demo/index.html
+++ b/demo/index.html
@@ -166,7 +166,7 @@
     </div>
     <div class="col-12">
         
-<div class="single-blog mb-4 mb-md-3 p-0 p-md-3 p-md-0">
+<div class="single-blog mb-4 mb-md-3 p-0">
     <a class="content-card border shadow-sm bg-white mb-3" href="/demo/angular-test-app.html">
     <div class="row">
         <div class="col-12 col-sm-5 col-md-4 preview position-relative text-center bg-white">
