--- a/portfolio/Attendance-System.html
+++ b/portfolio/Attendance-System.html
@@ -159,7 +159,7 @@
 </div>
 
         <div class="row">
-  <div class="col-12 p-0 p-md-3 p-md-0">
+  <div class="col-12 p-0">
     <div class="text-right w-100 d-inline-block">
       
     </div>
