--- a/portfolio/buy.co.sz.html
+++ b/portfolio/buy.co.sz.html
@@ -159,7 +159,7 @@
 </div>
 
         <div class="row">
-  <div class="col-12 p-0 p-md-3 p-md-0">
+  <div class="col-12 p-0">
     <div class="text-right w-100 d-inline-block">
       
         <a class="btn btn-success btn-rounded btn-live-demo" rel="noreferrer noopener" href="https://buy.co.sz" target="blank">Live Preview</a>
