--- a/my-skill-details/front-end.html
+++ b/my-skill-details/front-end.html
@@ -172,7 +172,36 @@
       </div>
     </div>
     <div class="main-skill-content">
-      
+      <p>I have long time experience in Front end Development.</p>
+
+<p>have good knowlede in css, html and javascript core. Have in-dept knowledge in How browser render a webpage and how javascript work on a page.</p>
+
+<h4 id="frequently-i-used-this-framework-and-rendering">Frequently I used this Framework and Rendering</h4>
+<ul>
+  <li>Angular</li>
+  <li>RxJS</li>
+  <li>Moment.js</li>
+  <li>lodash</li>
+</ul>
+
+<h4 id="web-animation">Web Animation</h4>
+<p>I love to implement web animation, it increase web page quality and user experience, i use following technology in Web Animation.</p>
+<ul>
+  <li>css3</li>
+  <li>javascript web animation api</li>
+  <li>SVG and SVG Animation</li>
+</ul>
+
+<h4 id="svg">SVG</h4>
+<p>worked on svg, svg icons and reuseable svg.</p>
+
+<h4 id="pwa">PWA</h4>
+<p>progressive web application.</p>
+
+<h4 id="assests-and-response-optimization">Assests and Response Optimization</h4>
+<p>in website assets and response size is matter, so optimized assets and reponse is very helpful for faster web app or website. i have working experience in this.</p>
+
+<h4 id="gzip-http2-and-http-header-for-faster-website">gzip, http2, and HTTP Header for faster website</h4>
 
     </div>
     <div class="mt-5">
