--- a/my-skill-details/front-end.html
+++ b/my-skill-details/front-end.html
@@ -203,6 +203,13 @@
 
 <h4 id="gzip-http2-and-http-header-for-faster-website">gzip, http2, and HTTP Header for faster website</h4>
 
+<h5 id="related-works">Related Works</h5>
+<p><a href="CellPhone Tracker">https://kousheralam.tech/portfolio/Cellphone-Tracker.html</a>
+<a href="Attendance System">https://kousheralam.tech/portfolio/Attendance-System.html</a>
+<a href="LTE Dashboard">https://kousheralam.tech/portfolio/lte-dashboard.html</a></p>
+
+<h5 id="related-posts">Related Posts</h5>
+
     </div>
     <div class="mt-5">
       
