--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Kousher Alam - Software Engineer" />
 <script type="application/ld+json">
-{"url":"https://kousheralam.tech/","headline":"Kousher Alam - Software Engineer","name":"Kousher Alam","@type":"WebSite","@context":"https://schema.org"}</script>
+{"url":"https://kousheralam.tech/","name":"Kousher Alam","headline":"Kousher Alam - Software Engineer","@type":"WebSite","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
   <script src="/assets/js/app.js"></script>
@@ -181,7 +181,7 @@
             <span class="timeline">
               <span class="from font-weight-bold text-primary">01 Sept 2020</span>
               <span class="space"> -  </span>
-              <span class="from font-weight-bold text-primary">Currently Working Here</span>
+              <span class="from font-weight-bold text-primary">31 Dec 2020</span>
               <span class="space"> | </span>
               <span class="from">Full Time</span>
               
