--- a/my-skill-details/build-tools.html
+++ b/my-skill-details/build-tools.html
@@ -50,7 +50,7 @@
 <meta property="twitter:image" content="https://kousheralam.tech/assets/blog/css-grid/future_technology_prospects.png" />
 <meta property="twitter:title" content="Build Tools" />
 <script type="application/ld+json">
-{"url":"https://kousheralam.tech/my-skill-details/build-tools.html","image":"https://kousheralam.tech/assets/blog/css-grid/future_technology_prospects.png","headline":"Build Tools","description":"Skill Destails description will be here","@type":"WebPage","@context":"https://schema.org"}</script>
+{"url":"https://kousheralam.tech/my-skill-details/build-tools.html","image":"https://kousheralam.tech/assets/blog/css-grid/future_technology_prospects.png","description":"Skill Destails description will be here","headline":"Build Tools","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
   <script src="/assets/js/app.js"></script>
