--- a/my-skill-details/server-side-development.html
+++ b/my-skill-details/server-side-development.html
@@ -50,7 +50,7 @@
 <meta property="twitter:image" content="https://kousheralam.tech/assets/blog/css-grid/future_technology_prospects.png" />
 <meta property="twitter:title" content="Server Side Development" />
 <script type="application/ld+json">
-{"url":"https://kousheralam.tech/my-skill-details/server-side-development.html","image":"https://kousheralam.tech/assets/blog/css-grid/future_technology_prospects.png","headline":"Server Side Development","description":"Skill Destails description will be here","@type":"WebPage","@context":"https://schema.org"}</script>
+{"url":"https://kousheralam.tech/my-skill-details/server-side-development.html","image":"https://kousheralam.tech/assets/blog/css-grid/future_technology_prospects.png","description":"Skill Destails description will be here","headline":"Server Side Development","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
   <script src="/assets/js/app.js"></script>
